# ministore

./: .env  .gitignore  Cargo.toml  README.md  build.rs  dockerfile
config/: default.toml  development.toml  production.toml
proto/: ministore.proto
src/: config.rs  device_manager.rs  lib.rs  main.rs  telemetry.rs  utils.rs
src/async_block_device/: async_simple_fake_device.rs  mod.rs
src/block_device/: data_type.rs  device_info.rs  io_uring_fake_device.rs  mod.rs  simple_async_fake_device.rs  simple_fake_device.rs
src/block_device_common/: device_info.rs  mod.rs
src/grpc_server/: mod.rs
tests/: integration_test.rs  run_test_in_docker.sh
