[package]
name = "ministore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
bincode = "1.3.3"
config = "0.13.3"
clap = { version = "4.1.14", features = ["cargo"] }