[package]
name = "ministore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
bincode = "1.3.3"
config = "0.13.3"
clap = { version = "4.1.14", features = ["cargo"] }
tonic = "0.8.3"
prost = "0.11"
tokio = { version = "1.27.0", features = ["fs"] }
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
tonic-build = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.5"